--- a/user/mainStyle.css
+++ b/user/mainStyle.css
@@ -21,3 +21,11 @@ body {
 #cont {
   padding:410px 0 0 0;
 }
+
+@media screen and (max-width: 767px) {
+  .sidenav {
+    height: auto;
+    padding: 15px;
+  }
+  .row.content {height:auto;} 
+}
