--- a/user/mainStyle.css
+++ b/user/mainStyle.css
@@ -18,8 +18,11 @@ body {
   float: left;
 }
 
+#upload {
+  margin: auto;
+}
 #cont {
-  padding:410px 0 0 0;
+  padding: 0px 0 0 0;
 }
 
 @media screen and (max-width: 767px) {
@@ -27,5 +30,5 @@ body {
     height: auto;
     padding: 15px;
   }
-  .row.content {height:auto;} 
+  .row.content {height:auto;}
 }
